css fixes / fix wrapping in doc

--- a/src/client/css/interface_common.css
+++ b/src/client/css/interface_common.css
@@ -171,7 +171,7 @@ does not contain the whole contents (and is possibly empty) */
 }
 */
 
-.M2Wrapped .M2Html {
+.M2Html.M2Wrapped, .M2Wrapped .M2Html {
     white-space: normal;
     word-break: break-word;
     display: inline;
@@ -373,3 +373,8 @@ ul.menu {
     height: inherit;
 }
 
+a {
+    cursor: pointer;
+    text-decoration:none;
+    color: rgb(200,50,0);
+}
